exam01/5-1-print_memory/5-1-print_memory.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r4p25.42.us.org
Darwin 17.2.0 x86_64
$> date
Fri Sep 28 21:11:46 PDT 2018
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.2.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.2.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/piscine-c-exam01/exam_20180929/kchenna

= Git history ==================================================================
$> git -C /var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user log --pretty='%H - %an, %ad : %s'
e32ffcfc7fead8f000ceda39c52de08fcfa0d5de - Exam 42, Fri Sep 28 21:11:36 2018 -0700 : asdkjfssafd
783c7f823224166e557429773150493310240b4a - Exam 42, Fri Sep 28 20:58:55 2018 -0700 : blah
609963e6cce688be1b98564038021c9560b281be - Exam 42, Fri Sep 28 20:47:15 2018 -0700 : blah blah level 4
a4d357eb915e30f86eee80eee5140bf7ac5b0451 - Exam 42, Fri Sep 28 20:11:42 2018 -0700 : mulifly
70e49684a71e0e22b9c9e29b3badaaf17f88a133 - Exam 42, Fri Sep 28 19:28:08 2018 -0700 : lame
cb8b5cfff6bb31f8dff1b72a0ee4cc3838f9d257 - Exam 42, Fri Sep 28 19:14:05 2018 -0700 : wtf
7ce6e519357ba69bf77effff58cd687a2f6b45c8 - Exam 42, Fri Sep 28 19:02:18 2018 -0700 : fuck this shit
bd19dc6a8c4f2cb9cde7360df2b923a18e40f730 - Exam 42, Fri Sep 28 18:32:26 2018 -0700 : level 1 completed
ffbafd7a76a4829a31afbd0ac891c4cf015e7386 - Exam 42, Fri Sep 28 18:20:39 2018 -0700 : level 0
 
= Collected files ==========================================
$> ls -lAR /var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user
total 8
-rw-r--r--  1 deepthought  deepthought  2237 Sep 28 21:11 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 aff_last_param
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 brainfuck
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 do_op
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 print_memory
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 repeat_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 rev_print
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 rot_13
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 sort_int_tab
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 21:11 tab_mult

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/aff_last_param:
total 8
-rw-r--r--  1 deepthought  deepthought  1171 Sep 28 21:11 aff_last_param.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/brainfuck:
total 8
-rw-r--r--  1 deepthought  deepthought  983 Sep 28 21:11 brainfuck.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/do_op:
total 8
-rw-r--r--  1 deepthought  deepthought  1394 Sep 28 21:11 do_op.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/print_memory:
total 8
-rw-r--r--  1 deepthought  deepthought  1211 Sep 28 21:11 print_memory.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/repeat_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1372 Sep 28 21:11 repeat_alpha.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/rev_print:
total 8
-rw-r--r--  1 deepthought  deepthought  1308 Sep 28 21:11 rev_print.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/rot_13:
total 8
-rw-r--r--  1 deepthought  deepthought  1400 Sep 28 21:11 rot_13.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/sort_int_tab:
total 8
-rw-r--r--  1 deepthought  deepthought  1214 Sep 28 21:11 sort_int_tab.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmp6oVqV0/user/tab_mult:
total 8
-rw-r--r--  1 deepthought  deepthought  1789 Sep 28 21:11 tab_mult.c
 
= print_memory =================================================================
$> gcc -Wextra -Wall -Werror print_memory.c main.c -o user_exe 
print_memory.c:23:20: error: format specifies type 'unsigned int' but the argument has type 'const void *' [-Werror,-Wformat]
        printf("%X ,%zu", addr, size);
                ~~        ^~~~
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
